# bevy_simple_i18n

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  page.yaml  publish.yml
assets/locales/: en.json  ja.json  v2_example.yml  zh-TW.json
examples/: basic.rs  changing_locale.rs  interpolation.rs
src/: components.rs  lib.rs  plugin.rs  resources.rs
src/components/: i18n_font.rs  i18n_number.rs  i18n_text.rs  i18n_text_2d.rs  mod.rs  utils.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: main.rs
