[package]
name = "bevy_simple_i18n"
version = "0.1.1"
edition = "2021"
authors = ["TurtIeSocks"]
license = "MIT OR Apache-2.0"
description = "Bevy i18n plugin"
repository = "https://github.com/TurtIeSocks/bevy_simple_i18n"
homepage = "https://github.com/TurtIeSocks/bevy_simple_i18n"
keywords = ["bevy", "gamedev", "i18n", "localization"]
categories = ["game-development", "localization"]
readme = "./README.md"
exclude = ["assets/"]

[workspace]
members = ["web"]

[features]
default = ["numbers"]
numbers = ["fixed_decimal", "icu_decimal", "fixed_decimal/ryu"]

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false, features = [
  "bevy_ui",
  "bevy_asset",
  "bevy_text",
] }
icu_locid = "1.5.0"
rust-i18n = "3"

fixed_decimal = { version = "0.5.6", optional = true }
icu_decimal = { version = "1.5.0", optional = true }

[dev-dependencies]
bevy = { version = "0.15.0-rc.3" }
rust-i18n = "3"

[build-dependencies]
cargo-emit = "0.2.1"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "changing_locale"
path = "examples/changing_locale.rs"
required-features = ["numbers"]
